<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EsperrApp</string>
    <string name="action_settings">Settings</string>
    <string name="disable_sound">Turn Off Sound!</string>
    <string name="enable_sound">Turn On Sound!</string>
    <string name="happy_espurr">Espurr is Happy</string>
    <string name="sad_espurr">Espurr is Sad</string>
    <string name="angry_espurr">Angry Espurr is Angry</string>
    <string name="full_espurr">Too Many PokePuffs!</string>
    <string name="quit">Seeya!</string>
    <string name="title_activity_change_to_happy">Espurr is a Happy Pokemon</string>
    <string name="hello_world">Hello world!</string>
    <string name="happyEspurr">Espurr is happy!</string>
    <string name="soglad">Espurr is so glad to see you!</string>
    <string name="title_activity_change_to_sad">Espurr is Saddened.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sadEspurr">My my, Espurr is very sad. What did you do?</string>
    <string name="title_activity_change_to_angry">Espurr is Angry!</string>
    <string name="mad_espurr">Mad Espurr is MAD!</string>
    <string name="title_activity_change_to_full">Espurr ate too many PokePuffs!</string>
    <string name="fullEspurr">Espurr is stuffed! It cannot eat anymore Pokepuffs.</string>

</resources>
